--- a/src/Off.Net.Pdf.Core/Properties/Resource.resx
+++ b/src/Off.Net.Pdf.Core/Properties/Resource.resx
@@ -117,13 +117,22 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Arg_MustBePdfBoolean" xml:space="preserve">
-    <value>Object must be a PDF Boolean type</value>
+  <data name="PdfInteger_MustBePdfInteger" xml:space="preserve">
+    <value>The object must be a PDF Integer type</value>
   </data>
-  <data name="Arg_MustBePdfInteger" xml:space="preserve">
-    <value>Object must be a PDF Integer type</value>
+  <data name="PdfReal_MustBePdfReal" xml:space="preserve">
+    <value>The object must be a PDF Real type</value>
   </data>
-  <data name="Arg_MustBePdfReal" xml:space="preserve">
-    <value>Object must be a PDF Real type</value>
+  <data name="PdfString_MustHaveBalancedParentheses" xml:space="preserve">
+    <value>The PDF string type must have balanced parentheses</value>
+  </data>
+  <data name="PdfString_MustHaveValidHexValue" xml:space="preserve">
+    <value>The object must be a PDF String type with a valid Hex value</value>
+  </data>
+  <data name="PdfString_MustHaveValidSolidusChars" xml:space="preserve">
+    <value>The PDF string type must have valid solidus characters</value>
+  </data>
+  <data name="PdfString_MustNotBeEmpty" xml:space="preserve">
+    <value>The PDF string type with Hex representation should have a value provided</value>
   </data>
 </root>
