--- a/src/Off.Net.Pdf.Core/Properties/Resource.resx
+++ b/src/Off.Net.Pdf.Core/Properties/Resource.resx
@@ -162,6 +162,9 @@
     <value>The cross-reference subsection must have non-empty list of entries</value>
   </data>
   <data name="XRefSection_MustHaveNonEmptyEntriesCollection" xml:space="preserve">
-    <value>The cross-reference section must have non-empty list of entries</value>
+    <value>The cross-reference subsection must have non-empty list of subsections</value>
+  </data>
+  <data name="XRefTable_MustHaveNonEmptyEntriesCollection" xml:space="preserve">
+    <value>The cross-reference table must have non-empty list of sections</value>
   </data>
 </root>
