feature(text): added basic text object and operations

--- a/src/Off.Net.Pdf.Core/Properties/Resource.resx
+++ b/src/Off.Net.Pdf.Core/Properties/Resource.resx
@@ -194,4 +194,7 @@
   <data name="Rectangle_PointMustBePositive" xml:space="preserve">
     <value>The point provided must be a positive number</value>
   </data>
+  <data name="FontOperation_FontSizeMustBePositive" xml:space="preserve">
+    <value>The font size must be greater or equal to 0</value>
+  </data>
 </root>
