--- a/src/OffDotNet.Pdf.CodeAnalysis/PDFResources.resx
+++ b/src/OffDotNet.Pdf.CodeAnalysis/PDFResources.resx
@@ -27,4 +27,10 @@
   <data name="ERR_InvalidPDF_Description" xml:space="preserve">
     <value>Some detailed description about this error</value>
   </data>
+  <data name="LinePosition_NegativeLineException" xml:space="preserve">
+    <value>The line number must be greater than or equal to zero.</value>
+  </data>
+  <data name="LinePosition_NegativeCharacterException" xml:space="preserve">
+    <value>The character number must be greater than or equal to zero.</value>
+  </data>
 </root>
